<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="Skill_Position_anfahren_erweitert" Id="{20d2290a-8794-4965-a133-9ad0acf7b5f9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Skill_Position_anfahren_erweitert	IMPLEMENTS I_Skill_Roboter  
VAR_INPUT
	// Zu verwendetes Objekt
	Objekt						:I_Objekt_Roboter;	
	
	eSysCommand					:eSystemCommand; 						// Systembefehl an Skill
	eSysState					:eSystemState;							// Momentaner Zustand des Systems
	eObjState					:eObjectState; 							// Momentaner Zustand des Objektes
	bLimit						:BOOL;
	bErreicht					:BOOL;
END_VAR
VAR_OUTPUT
	iErrorID					:INT;									// Fehlercode für System
END_VAR
VAR
	// Managementvariablen
	iState				:eSkillState;									// Information über Zustand von Skill
	
	// Managementvariablen 
	bGestartet			:BOOL;
	bGestoppt			:BOOL;
	
	// Zustandsvariablen
	bStarten			:BOOL;
	bStoppen			:BOOL;
	bObjektFertig		:BOOL;
	bWertErreicht		:BOOL;				
	bLimitErreicht		:BOOL;				
	bSkillFertig		:BOOL;
	bFehler				:BOOL;
	bResetten			:BOOL;
	
	// Prozessvariablen
	eProzessvariable 	:sRoboterProzessVariablen;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Fehlerüberwachung
IF bFehler THEN
	iState := 3;
END_IF

//_______________________________________________________________
// Reaktion auf Input-Variablen:
	// Stoppen
	IF eSysCommand = 3 THEN
		bStoppen := M_Stop();
	ELSE 
		bStoppen := FALSE;
	END_IF

	// Resetten 
	IF eSysCommand = 4 THEN
		bResetten := M_Reset();
	ELSE
		bResetten := FALSE;
	END_IF
	
	// Limit
	IF bLimit THEN
		bLimitErreicht := M_Stop();
	ELSE
		bLimitErreicht := FALSE;
	END_IF
	
	// Erreicht
	IF bErreicht THEN
		bWertErreicht := M_Stop();
	ELSE
		bWertErreicht := FALSE;
	END_IF
//_______________________________________________________________
// Zustandsmanagement
CASE iState OF 
0: 	// BEREIT	
		// DO
		IF eObjState = 3 THEN		// Objekt wurde eingeschalten
			bStarten := TRUE;
		END_IF
		
		// TRANSITION
		IF bStarten	 THEN		
			bStarten := FALSE;
			iState := 1;	
		END_IF
		
		
// _________________________________________________________________________________________________________________________
1: 	// LAUFEND
		// DO			
			// Stoppen durch Sysezm
			IF bStoppen THEN																								// Transition wenn System das Orbjekt stoppt
				bGestoppt := TRUE;
			END_IF
			
			// Objekt hat sich selber gestoppt
			IF eObjState = 4 THEN																							// Objekt hat Prozess abgeschlossen
				bObjektFertig := TRUE;																							// Objekt ist fertig und wieder bereit
			END_IF
			
		// TRANSITION 
		IF bGestoppt THEN																								// Transition zu BEREIT
			bGestoppt := FALSE;													
			iState := 0;
		END_IF
		
		IF bObjektFertig THEN																							// Transition zu ABGESCHLOSSEN
			bObjektFertig := FALSE;																							// Skill wird nicht mehr ausgeführt
			iState := 2;																									// Objekt ist fertig und wieder bereit
		END_IF
		
		IF bLimitErreicht AND eObjState = 5 THEN																							// Transition zu LIMIT
			iState := 4;
		END_IF
		
		IF bWertErreicht AND eObjState = 5 THEN																							// Transition zu ERREICHT
			iState := 5;
		END_IF
			
// _________________________________________________________________________________________________________________________			
2: 	// ABGESCHLOSSEN
		// DO
		IF eObjState = 1 THEN																							// Objekt wurde geresettet
			bSkillFertig := TRUE;									
		END_IF
			
		//  TRANSITION
		IF bSkillFertig THEN
			bSkillFertig := FALSE;																																											// Resetten von Objekt
			iState := 0;
		END_IF
		
// _________________________________________________________________________________________________________________________
3: 	// FEHLER
		// DO 	
		
		// TRANSITION
		IF bResetten THEN
			iState := 0;
		END_IF
		
// _________________________________________________________________________________________________________________________			
4: 	// LIMIT
		// DO		
		M_Reset();
		
		IF eObjState = 1 THEN																								// Objekt wurde geresettet
			bResetten := TRUE;								
		END_IF
	
		// TRANSITION
		IF bResetten THEN
			bResetten := FALSE;
			iState := 0;
		END_IF
			
// _________________________________________________________________________________________________________________________
5: 	// ERREICHT		
		// DO 
		M_Reset();
		
		IF eObjState = 1 THEN																							// Objekt wurde geresettet
			bSkillFertig := TRUE;									
		END_IF
		
		// TRANSITION
		IF bSkillFertig THEN
			bSkillFertig := FALSE;
			iState := 0;
		END_IF
		
END_CASE]]></ST>
    </Implementation>
    <Folder Name="01_Steuerungsmethoden" Id="{24108a3b-139b-4abc-9ee1-f7b20236da36}" />
    <Folder Name="02_Steuerungseigenschaften" Id="{81dfad2e-6b4f-4546-926f-b569be2ebe07}" />
    <Folder Name="03_Prozesseigenschaften" Id="{dd74a067-ae87-4bd8-ac55-cd491d80091d}" />
    <Method Name="M_Reset" Id="{2e9015dd-f485-4671-90bc-8e693338c9f5}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Reset : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Objekt.M_Reset();]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Start" Id="{bcb53f09-8eee-41d0-920b-9b5bddfe5634}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Start : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Prüfen von Bedingungen
	// Ist das  System im korrekten Status
	IF eSysState = 1 THEN
		// Ist der Skill im korrekten Status 
		IF iState = 0 THEN
			// Prüfen auf Fehler (Muss ergänzt werden)
				Objekt.M_Start();	
		END_IF
	END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Stop" Id="{ec311155-7585-4e1e-a8e1-ec23ba2ba7f7}" FolderPath="01_Steuerungsmethoden\">
      <Declaration><![CDATA[METHOD M_Stop : BOOL
]]></Declaration>
      <Implementation>
        <ST><![CDATA[Objekt.M_Stop();]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_Prozessparameter" Id="{863f8152-8c1c-4a86-9f2a-e5585699e56c}" FolderPath="03_Prozesseigenschaften\">
      <Declaration><![CDATA[PROPERTY P_Prozessparameter : sRoboterProzessVariablen]]></Declaration>
      <Set Name="Set" Id="{770259d5-6ad2-4f05-bad3-f33c6f5f52b9}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[eProzessvariable := P_Prozessparameter; 
Objekt.P_Prozessparameter := eProzessvariable;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="P_State" Id="{a7d51d8e-fee2-4f41-ac35-d1a2b9f3cc03}" FolderPath="02_Steuerungseigenschaften\">
      <Declaration><![CDATA[PROPERTY P_State : eSkillState]]></Declaration>
      <Get Name="Get" Id="{a4e9133e-8c8c-4005-84ab-77b9f037aa9d}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_State := iState; ]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>